Revision history for Perl extension JavaScript::Minifier::XS.

{{$NEXT}}

0.14      2021-02-06 23:36:36-08:00 America/Vancouver
    - rewrote test suite into a single ".t" test
    - optimized memory allocations, by allocating Nodes in bulk, and being
      smarter about when we need to free/reallocate content buffers in Nodes
    - optimize whitespace collapsing
    - GH#3 / RT#108682; fix whitespace reduction at end of preserved line
      comment.  Thanks to Dan Goodliffe
    - GH#6; fix unescaped slash in character set, inside of a regex, with thanks
      to @faf

0.13      2020-12-30 21:46:29-08:00 America/Vancouver
    - POD cleanups; spelling, SYNOPSIS
    - Switch to DZil Author Bundle

0.12      2020-12-28 08:31:31-08:00 America/Vancouver
    - Switch to GitHub Actions, from Travis-CI.
    - Add META links to GitHub repository and issue tracker
    - Switch to Dist::Zilla
    - Bump minimum required Perl to 5.8.1
    - RT #130347; handle ES6 template literals.
      Thanks to Robert Rothenberg.

0.11        Tue Jan 27 16:50 PST 2015
    - RT #58416; don't segfault when trying to minify non-javascript

0.10        Mon Jan 26 22:46 PST 2015
    - RT #64948; allow builds on older versions of Perl.
      Thanks to Michael Robinton and Ruslan Zakirov.
    - Lowered minimum Perl version to v5.6.0, as detected by
      Perl::MinimumVersion.
    - RT #51008; allow for minification of JS code that returns regexps from
      functions.
      Thanks to James Barton, Robert Krimen, and Randy Stauner.
    - Added "xt/test-compile.t" to test minification against a wider range of
      JS.  While not a 100% guarantee that the JS still works, it does provide
      a wider range of JS to test against.

0.09        Tue Nov  2 22:12 PDT 2010
    - Bump required Perl version to 5.8.8; oldest release w/Newxz() available.

0.08        Wed Jul 21 21:23 PDT 2010
    - use Newxz/Safefree for memory management, instead of malloc/free.  Thanks